--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -3,55 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
+    <title>404 Error - Page Not Found</title>
     <style>
         body {
-            background-color: #f5f5f5;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            text-align: center;
-        }
-
-        .error-code {
-            font-size: 120px;
-            color: #e44d26;
-            margin: 0;
-        }
-
-        .error-message {
-            font-size: 24px;
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
             color: #333;
-            margin-bottom: 20px;
+            text-align: center;
+            padding: 100px;
         }
 
-        .back-to-home {
+        h1 {
+            font-size: 80px;
+            margin-bottom: 30px;
+        }
+
+        p {
+            font-size: 20px;
+            margin-bottom: 30px;
+        }
+
+        a {
+            color: #007bff;
             text-decoration: none;
-            color: #fff;
-            background-color: #333;
-            padding: 10px 20px;
-            font-size: 18px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
         }
 
-        .back-to-home:hover {
-            background-color: #e44d26;
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="error-code">404</h1>
-        <p class="error-message">Oops! The page you are looking for does not exist in this dimension! Try an alternate universe.</p>
-        <p class="error-message">Ceci n'est pas une page</p>
-        <a href="#" class="back-to-home">Back to Home</a>
-    </div>
+    <h1>404</h1>
+    <p>Oops! The page you are looking for could not be found.</p>
+    <p>Ceci n'est pas une page</p>
+    <p>Go back to <a href="/">homepage</a>.</p>
 </body>
 </html>
